--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -2,6 +2,11 @@
 Changelog
 =========
 
+1.0b3 (2011-02-06)
+------------------
+
+- set default page on the import root
+
 1.0b2 (2010-12-13)
 ------------------
 
